<resources>
    <string name="app_name">CookingApp</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_cookbook">Ricettario</string>
    <string name="title_shoplist">Lista Spesa</string>
    <string name="title_converter">Convertitore</string>
    <string name="searchBar_text">Cerca…</string>
    <string name="converter_spoon_text_title">Cucchiai</string>
    <string name="converter_gr_text_title">Grammi</string>
    <string name="converter_butter_text_title">Burro (gr)</string>
    <string name="converter_oil_text_title">Olio (gr)</string>
    <string name="converter_glass_text_title">Bicchieri</string>
    <string name="converter_ml_text_title">Millilitri</string>
    <string name="converter_yogurt_text_title" translatable="false">Yogurt (gr)</string>
    <string name="converter_milk_text_title">Latte (ml)</string>
    <string name="converter_button_reset_name" translatable="false">Reset</string>
    <string name="converter_icon_change_alt" translatable="false">Converter icon</string>
    <string name="converter_icon_units_alt" translatable="false">Units icon</string>
    <string name="converter_hint" translatable="false">0.0</string>
    <string name="converter_switch_button">Inverti</string>
    <string name="converter_changeunits_button">Cambia unità</string>
    <string name="popup_difficoltà">Difficoltà</string>
    <string name="popup_facile">Facile</string>
    <string name="popup_medio">Media</string>
    <string name="popup_difficile">Difficile</string>
    <string name="popup_portata">Portata</string>
    <string name="popup_antipasto">Antipasto</string>
    <string name="popup_primo">Primo</string>
    <string name="popup_secondo">Secondo</string>
    <string name="popup_dessert">Dessert</string>
    <string name="popup_durata">Durata</string>
    <string name="popup_veloce">Veloce</string>
    <string name="popup_lunga">Lunga</string>
    <string name="popup_tutte">Tutte le ricette</string>
    <string-array name="shoplist_units">
        <item>ML</item>
        <item>CL</item>
        <item>L</item>
        <item>GR</item>
        <item>HG</item>
        <item>KG</item>
        <item>Qty</item>
    </string-array>
    <string-array name="difficulty_units">
        <item>@string/popup_facile</item>
        <item>@string/popup_medio</item>
        <item>@string/popup_difficile</item>
    </string-array>
    <string-array name="portata_units">
        <item>@string/popup_antipasto</item>
        <item>@string/popup_primo</item>
        <item>@string/popup_secondo</item>
        <item>@string/popup_dessert</item>
    </string-array>
    <string name="minutes">Minuti</string>
    <string name="shoplist_icon_alt" translatable="false">Delete icon</string>
    <string name="shoplist_product_hint">Prodotto</string>
    <string name="shoplist_plus">Aggiungi</string>
    <string name="shoplist_fab_share_alt">Condividi</string>
    <string name="shopllist_fab_hint">Inserisci almeno un prodotto</string>
    <string name="shoplist_compiler_check">Compila tutti i campi</string>
    <string name="shoplist_separator_preposition">di</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="login_button">Accedi</string>
    <string name="login_signin_request"><u>Oppure iscriviti</u></string>
    <string name="add_shoplist_title">Componi la tua lista della spesa</string>
    <string name="signin_button">Iscriviti</string>
    <string name="signin_login_request"><u>Sei già iscritto? Accedi</u></string>
    <string name="label_ingredienti">Ingredienti:</string>
    <string name="recipe_ingredient_hint">Ingrediente</string>
    <string name="recipe_ingredient_qty_hint">0</string>
    <string name="signin_compile_error">I dati inseriti non sono corretti, controlla</string>
    <string name="signin_password_error">La password deve:\nAvere lunghezza compresa tra 8 e 20 caratteri.\nContenere almeno una cifra.\nContenere almeno una maiuscola.\nContenere almeno una minuscola.\nContenere almeno un carattere speciale tra !?@#$%*()-+=^\n</string>
    <string name="welcome_message">benvenuto in</string>
    <string name="signin_error_message">L\'email è già presente nel database</string>
    <string name="login_cred_error">Email e/o password errate</string>
    <string name="signin_invalid_email">L\'email non è valida</string>
    <string name="cookbook_tutte">Tutte</string>
    <string name="cookbook_mieRicette">Le mie ricette</string>
    <string name="cookbook_preferite">Preferite</string>
    <string name="label_preparazione">Preparazione:</string>
    <string name="label_conservazione">Conservazione:</string>
    <string name="inserimento_preparazione_hint">Inserisci la preparazione</string>
    <string name="inserimento_conservazione">Inserisci il metodo di conservazione</string>
    <string name="label_recipe_difficolta">Difficoltà</string>
    <string name="label_header_preparazione">Preparazione</string>
    <string name="label_header_cottura">Cottura</string>
    <string name="label_header_dosi">Dosi</string>
    <string name="label_header_portata">Portata</string>
    <string name="signin_name_hint">Nome</string>
    <string name="signin_surname_hint">Cognome</string>
    <string name="inserisci_nome_ricetta">Inserisci il nome della ricetta</string>
    <string name="photo_uploading_message">Sto salvando la foto...</string>
    <string name="uploading_error">Qualcosa è andato storto...</string>
    <string name="uploading_done">La foto è stata salvata!</string>
    <string name="deletingImageWaiting">Sto eliminando l\'immagine...</string>
    <string name="deletingDoneImage">L\'immagine è stata rimossa correttamente!</string>
    <string name="elimina_ricetta">Elimina Ricetta</string>
    <string name="shoplist_pre_message"><i>CookingApp</i>\nLa tua lista della spesa comprende:\n\n</string>
</resources>