<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.cookingapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cookbook"
        android:name="com.example.cookingapp.ui.cookbook.CookbookFragment"
        android:label="@string/title_cookbook"
        tools:layout="@layout/fragment_cookbook" />

    <fragment
        android:id="@+id/navigation_shoplist"
        android:name="com.example.cookingapp.ui.shoplist.ShoplistFragment"
        android:label="@string/title_shoplist"
        tools:layout="@layout/fragment_shoplist" />

    <fragment
        android:id="@+id/navigation_converter"
        android:name="com.example.cookingapp.ui.converter.ConverterFragment"
        android:label="@string/title_converter"
        tools:layout="@layout/fragment_shoplist" />
</navigation>