<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.converter.ConverterFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="35"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@drawable/drawable_roundborder_convertor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/converter_tv_gr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/converter_gr_text_title"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/converter_et_gr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="90"
                android:ems="5"
                android:gravity="center"
                android:hint="0.00"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:numeric="decimal"
                android:textSize="36sp" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="45" />

        <ImageButton
            android:id="@+id/converter_change_values"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@color/white"
            android:contentDescription="@string/converter_icon_alt"
            android:src="@mipmap/ic_converter_arrows_round" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="45" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="35"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:background="@drawable/drawable_roundborder_convertor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/converter_tv_spoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/converter_spoon_text_title"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/converter_et_spoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:ems="5"
                android:gravity="center"
                android:hint="0"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:textSize="36sp" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">

        <Space
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="30" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="45" />

            <Button
                android:id="@+id/converter_reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:text="@string/converter_button_reset_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="45" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="30" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5" />
</LinearLayout>